--- a/README.1
+++ b/README.1
@@ -1,2 +1,4 @@
 # DSA-Projects
 This is the program for user Sign Up, Login, Delete and Edit operations for the user details entered.
+It is the project made by using the concept of Structure.
+We have created a User Structure for Storing data inputed by the user.
